--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.4",
     "@mui/material-nextjs": "next",
+    "apexcharts": "^4.5.0",
     "lodash": "^4.17.21",
     "next": "^15.0.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
