--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@hookform/resolvers": "^4.1.0",
     "@iconify/react": "^5.2.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.4",
@@ -23,7 +24,9 @@
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
