--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mui/material": "^6.4.4",
     "@mui/material-nextjs": "next",
     "@mui/x-data-grid": "^7.27.0",
+    "@mui/x-date-pickers": "^7.27.0",
     "apexcharts": "^4.5.0",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "next": "^15.0.0",
     "react": "^19.0.0",
